<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        style="@style/MyTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/material_16dp"
        android:layout_marginTop="@dimen/material_24dp"
        android:layout_marginEnd="@dimen/material_16dp"
        android:hint="@string/email"
        android:textColorHint="@color/gray"
        android:translationY="-4dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_email"
            style="@style/TextView.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/material_8dp"
            android:padding="@dimen/material_16dp"
            android:textColor="@color/black"
            android:textCursorDrawable="@drawable/black_cursor"
            android:textSize="@dimen/material_typography_body1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_subject"
        style="@style/MyTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/material_16dp"
        android:layout_marginTop="@dimen/material_24dp"
        android:layout_marginEnd="@dimen/material_16dp"
        android:hint="@string/subject"
        android:textColorHint="@color/gray"
        android:translationY="-4dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_subject"
            style="@style/TextView.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/material_8dp"
            android:padding="@dimen/material_16dp"
            android:textColor="@color/black"
            android:textCursorDrawable="@drawable/black_cursor"
            android:textSize="@dimen/material_typography_body1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_message"
        style="@style/MyTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/material_16dp"
        android:layout_marginTop="@dimen/material_24dp"
        android:layout_marginEnd="@dimen/material_16dp"
        android:hint="@string/message"
        android:textColorHint="@color/gray"
        android:translationY="-4dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_message"
            style="@style/TextView.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/material_8dp"
            android:padding="@dimen/material_16dp"
            android:minLines="4"
            android:gravity="top"
            android:textColor="@color/black"
            android:textCursorDrawable="@drawable/black_cursor"
            android:textSize="@dimen/material_typography_body1" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:backgroundTint="@color/forest_green"
        android:layout_marginTop="@dimen/material_8dp"
        android:text="@string/create"
        android:layout_gravity="center"/>

</LinearLayout>